Changed the model to separate the script_file from the auxiliar_files of a Task.
