# backend/swagger.yml
@@ -208,22 +208,17 @@ paths:
         '400':
           "$ref": "#/responses/BadRequest"
       tags:
-      - Taskfiles
+      - TaskFile
     post:
-      summary: Uploads script and auxiliar files, creating an TaskFiles register
+      summary: Uploads script and auxiliar files, creating an TaskFile register
       consumes:
         - multipart/form-data
       parameters:
       - in: formData
-        name: script_file
+        name: file
         required: true
         type: file
-        description: Python or R script
-      - in: formData
-        name: auxiliar_files
-        required: false
-        type: file
-        description: Auxiliar files (may upload multiple files with the same field)
+        description: File
       responses:
         '201':
           "$ref": "#/responses/Created"
@@ -234,36 +229,36 @@ paths:
         '422':
           "$ref": "#/responses/ValidationError"
       tags:
-      - Taskfiles
+      - TaskFile
   "/taskfiles/{taskfileId}":
     get:
-      summary: Retrieves a Taskfiles document
+      summary: Retrieves a TaskFile document
       responses:
         '200':
-          description: Taskfiles document fetched successfully
+          description: TaskFile document fetched successfully
           schema:
-            "$ref": "#/definitions/Taskfiles"
+            "$ref": "#/definitions/TaskFile"
         '400':
           "$ref": "#/responses/BadRequest"
         '404':
           "$ref": "#/responses/NotFound"
       parameters:
-      - "$ref": "#/parameters/Taskfiles__id"
+      - "$ref": "#/parameters/TaskFile__id"
       - "$ref": "#/parameters/embedded"
       tags:
-      - Taskfiles
+      - TaskFile
     delete:
-      summary: Deletes a Taskfiles document
+      summary: Deletes a TaskFile document
       responses:
         '204':
-          description: Taskfiles document deleted successfully
+          description: TaskFile document deleted successfully
         '404':
           "$ref": "#/responses/NotFound"
       parameters:
       - "$ref": "#/parameters/if_match"
-      - "$ref": "#/parameters/Taskfiles__id"
+      - "$ref": "#/parameters/TaskFile__id"
       tags:
-      - Taskfiles
+      - TaskFile
   "/tasks":
     get:
       summary: Retrieves one or more tasks
@@ -356,7 +351,7 @@ paths:
     get:
       summary: Retrieves one or more tasks
       parameters:
-      - "$ref": "#/parameters/Taskfiles__id"
+      - "$ref": "#/parameters/TaskFile__id"
       - "$ref": "#/parameters/page"
       - "$ref": "#/parameters/max_results"
       - "$ref": "#/parameters/embedded"
@@ -556,19 +551,14 @@ definitions:
         type: string
     required:
     - name
-  Taskfiles:
+  TaskFile:
     type: object
     properties:
-      script_file:
+      file:
         type: string
         description: "File's URL"
-      auxiliar_files:
-        type: array
-        items:
-          type: string
-          description: "File's URL"
       _id:
-        "$ref": "#/definitions/Taskfiles__id"
+        "$ref": "#/definitions/TaskFile__id"
       _updated:
         readOnly: true
         type: string
@@ -585,8 +575,12 @@ definitions:
     properties:
       name:
         type: string
-      files:
-        "$ref": "#/definitions/Taskfiles__id"
+      script_file:
+        "$ref": "#/definitions/TaskFile__id"
+      auxiliar_files:
+        type: array
+        items:
+          "$ref": "#/definitions/TaskFile__id"
       param_definitions:
         type: array
         items:
@@ -688,7 +682,7 @@ definitions:
     required:
     - task
     - queue
-  Taskfiles__id:
+  TaskFile__id:
     type: string
     format: objectid
   Task__id:
@@ -735,7 +729,7 @@ definitions:
       _items:
         type: array
         items:
-          "$ref": "#/definitions/Taskfiles"
+          "$ref": "#/definitions/TaskFile"
       _meta:
         type: object
         properties:
@@ -840,7 +834,7 @@ parameters:
     description: ''
     type: string
     format: objectid
-  Taskfiles__id:
+  TaskFile__id:
     in: path
     name: taskfileId
     required: true
@@ -899,6 +893,6 @@ parameters:
 tags:
 - name: Queue
 - name: Worker
-- name: Taskfiles
+- name: TaskFile
 - name: Task
 - name: Experiment
